--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,21 @@ body {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
+.row:after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.row {
+    display: flex;
+}
+
+.column {
+    flex: 50%;
+    padding: 5px;
+}
+
 </style>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +32,15 @@ body {
 <body>
 
 <h1>Remoto</h1>
-<img src="avatar.png" alt="Avatar" style="width:100px">
+<div class = "row">
+    <div class = "column">   
+        <img src="avatar.png" alt="Avatar" style="width:100%">
+    </div>
+    <div class = "column">
+        <img src="avatar.png" alt="Avatar" style="width:100%">
+    </div>
+</div>
+        
 <p>We connect you with a remote doctor who can diagnose your health issues and provide recomendations.</p>
 
 <h2> Get Started </h2>
