--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ body {
 <h1>Remoto</h1>
 <div class = "row">
     <div class = "column">   
-        <img src="avatar.png" alt="Avatar" style="width:100%">
+        <img src="avatar.png" alt="Avatar" style="width:100px">
     </div>
     <div class = "column">
-        <img src="avatar.png" alt="Avatar" style="width:100%">
+        <img src="avatar.png" alt="Avatar" style="width:100px">
     </div>
 </div>
         
