--- a/index.html
+++ b/index.html
@@ -34,18 +34,24 @@ body {
 <h1>Remoto</h1>
 <div class = "row">
     <div class = "column">   
-        <img src="avatar.png" alt="Avatar" style="width:200px">
+        <img src="avatar.png" alt="Avatar" style="width:100px">
     </div>
-    <div class = "column">
-        <img src="avatar.png" alt="Avatar" style="width:200px">
+    <div class = "column" id = "avatar1">
+        <img src="avatar.png" alt="Avatar" style="width:100px">
     </div>
 </div>
-        
-<p>We connect you with a remote doctor who can diagnose your health issues and provide recomendations.</p>
+
+<div class = "row2">
+    <div class = "first">
+        <p>We connect you with a remote doctor who can diagnose your health issues and provide recomendations.</p>
+    </div>
+</div>
+
 
 <h2> Get Started </h2>
 
 
 </body>
 </html>
+
 
