--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@ body {
 <h1>Remoto</h1>
 <div class = "row">
     <div class = "column">   
-        <img src="avatar.png" alt="Avatar" style="width:100px">
+        <p> 
+            <a href="https://samarth1998.github.io/CSE_170-COGS_120/doctor_home.html"> 
+                <img src="avatar.png" alt="Avatar" style="width:100px">
+            </a>
+        </p>
     </div>
     <div class = "column" id = "avatar1">
-        <img src="avatar.png" alt="Avatar" style="width:100px">
+        <p> 
+            <a href="https://samarth1998.github.io/CSE_170-COGS_120/hospital_home.html"> 
+                <img src="avatar.png" alt="Avatar" style="width:100px">
+            </a>
+        </p>
+
     </div>
 </div>
 
@@ -48,7 +57,7 @@ body {
 </div>
 
 
-<h2> Get Started </h2>
+<h2> Get Started <a href="https://samarth1998.github.io/CSE_170-COGS_120/doctor_home.html"> </h2>
 <script src="js/home.js"></script>
 
 </body>
