get started hyperlink

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@ body {
 </div>
 
 
-<h2> Get Started <a href="https://samarth1998.github.io/CSE_170-COGS_120/doctor_home.html"> </h2>
+<h1> 
+    <a href="https://samarth1998.github.io/CSE_170-COGS_120/doctor_home.html">
+        Get Started
+    </a>
+</h1>
+
 <script src="js/home.js"></script>
 
 </body>
