--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@ body {
     <div class = "column">   
         <p> 
             <a href="https://samarth1998.github.io/CSE_170-COGS_120/doctor_home.html"> 
-                <img src="avatar.png" alt="Avatar" style="width:100px">
+                <img src="hospital.png" alt="Avatar" style="width:100px">
             </a>
         </p>
     </div>
-    <div class = "column" id = "avatar1">
+    <div class = "column">
         <p> 
             <a href="https://samarth1998.github.io/CSE_170-COGS_120/hospital_home.html"> 
-                <img src="avatar.png" alt="Avatar" style="width:100px">
+                <img src="doctor.png" alt="Avatar" style="width:100px">
             </a>
         </p>
 
