--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ body {
     padding: 5px;
 }
 
+.h2 {
+    color: #5B98F8;
+}
+
 </style>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
