circle around get started + text size changes

--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@ body {
     padding: 5px;
 }
 
-.h1 {
+.h2 {
     color: #5B98F8;
+}
+
+.circle {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  font-size: 50px;
+  color: #fff;
+  line-height: 500px;
+  text-align: center;
+  background: #000
 }
 
 </style>
@@ -60,12 +71,13 @@ body {
     </div>
 </div>
 
-
-<h1> 
-    <a href="https://samarth1998.github.io/CSE_170-COGS_120/doctor_home.html">
-        Get Started
-    </a>
-</h1>
+<div class = "circle">
+    <h2> 
+        <a href="https://samarth1998.github.io/CSE_170-COGS_120/doctor_home.html">
+            Get Started
+        </a>
+    </h2>
+</div>
 
 <script src="js/home.js"></script>
 
