--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@ body {
 }
 
 .circle {
-  width: 500px;
-  height: 500px;
-  border-radius: 50%;
-  font-size: 50px;
-  color: #fff;
-  line-height: 500px;
-  text-align: center;
-  background: #000
+    margin: auto;
+
+    height: 500px;
+    padding: 70px 0;
+    border-radius: 14%;
+    font-size: 50px;
+    color: #5B98F8;
+    line-height: 500px;
+    text-align: center;
+    background: #fff
 }
 
 </style>
