--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body {
 </div>
 
 <div id="profile">
-    <img src="profile.png" class = "home">
+    <img src="profile.png">
 </div>
 
 <script src="js/home.js"></script>
