--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@ body {
     <img src="profile.png">
 </div>
 
-<script src="js/home.js"></script>
-
+<script>
+        let d = new Date();
+        alert("Today's date is " + d);
+    </script>
 </body>
 </html>
 
