--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ body {
     right: 0px;
 }
 
+.h1 {
+    font: sans-serif;
+}
+
 </style>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
