--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
 </div>
 
 <div id="profile">
-    <img src="profile.png">
+    <img src="profile.png" width="20px" height="20px">
 </div>
 
 <script>
