--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ body {
 }
 
 #profile {
-    position: relative;
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
 
 #profile img {
@@ -86,7 +88,7 @@ body {
 </div>
 
 <div id="profile">
-    <img src="profile.png" width="20px" height="20px">
+    <img src="profile.png" width="50px" height="50px">
 </div>
 
 <script>
