image and hyperlink fixed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <title>Remoto</title>
 <style>
+
+a { text-decoration : none; color : #000; }
+
 body {
     background-color: White;
     text-align: center;
