--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
     <div class = "column">   
         <p> 
             <a href="https://samarth1998.github.io/CSE_170-COGS_120/doctor_home.html"> 
-                <img src="doctor.png" alt="Avatar" style="width:200px">
+                <img src="doctor.png" alt="Avatar" style="width:200px"; border: "#0000 6px outset;">
                 <p> Talk to a doctor </p>
             </a>
         </p>
