--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@ body {
     flex: 50%;
     padding: 5px;
     border-style: solid;
+    border-color: #5B98F8;
+    border-width: 200px;
+    border height: 200px;
+    align-items: center;
+    color: #5B98F8;
 }
 
 .h2 {
