--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-<title>Find a hospital</title>
+<title>Profile</title>
 <style>
 body {
     background-color: White;
@@ -31,10 +31,11 @@ body {
 </head>
 <body>
 
-<h1>Hospital</h1>
+<h1>Profile</h1>
 
 
-<h2> List of hospitals here </h2>
+
+<h2> About you!  </h2>
 
 <hr>
 
