--- a/doctor_home.html
+++ b/doctor_home.html
@@ -98,7 +98,7 @@ body {
 </div>
 
 <div id="back">
-    <a onclick="goBack()">
+    <a href="https://samarth1998.github.io/CSE_170-COGS_120/home.html";>
         <img src="back.png" width="40px" height="40px">
     </a>
 </div>
