--- a/hospital_home.html
+++ b/hospital_home.html
@@ -42,7 +42,7 @@ body {
 
 <script>
 function goBack() {
-    window.history.back();
+    <a href="https://samarth1998.github.io/CSE_170-COGS_120/profile.html";>
 }
 </script>
 
