--- a/doctor_home.html
+++ b/doctor_home.html
@@ -175,7 +175,7 @@ body {
         </div>
         <div id="happybtn">
 
-        <img src="sad.png" />
+        <img src="happy.png" />
         Happy
         </div>  
     </div>
